# gw-school-2026-materials

./: README.md  SETUP.md  pyproject.toml
Week_1/Day_5/Tutorials/: NimaDemoUtils.py  NimaGWB.ipynb
